# file-size-reducer-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
reducers/: img-reducer.py
src/size_reducer_cli/: __init__.py  cli.py  reducer.py
src/size_reducer_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py
